--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-	<title>Contacto Telefónico DUCS</title>
+	<title>Subdirección de Intervención y Contacto Policial</title>
     <link href="css/stylelogin.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4a84d99523.js" crossorigin="anonymous"></script>
     <script src="js/login.js" rel="javascript"></script>
@@ -18,7 +18,7 @@
 			<div class="container">
 				<div class="row">
 					<a>
-						<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjnhs128yKSxpdQb5rbMfY3KrAQA-_O69DD_-l22NCw18mRtUxmo1d_B59MkxAmxk2XG_1MGnFxwIWuO5a0Xz8zA-gVxK-GZSzkrD2WgOGT78BMQOXVSFw2wiNckozXoygosxgz-R-DN8LspFKogRgbiirXQbq5XSmN6N_-wZ5J5YzlRpn3cEjJNKoLeg/s16000/Encabezados_Login(ok).png" style="max-width:100%;">
+						<img src="img/EncabezadoIndex.png" style="max-width:100%;">
         			</a>
 					
 				</div>
@@ -65,7 +65,7 @@
         Desarrolado por: UCH
       </a>
     </small>
-  </span>
+  </span><br>
   
 </footer>
 
