--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         Unidad de Contacto del Secretario
       </a>|
       <a>
-        Desarrolado por: UCH
+        Desarrollado por: UCH
       </a>
     </small>
   </span><br>
